# DengueSim

./: .gitignore  README.md  foo.txt
DengueSim/: CMakeLists.txt  Human.cpp  Human.h  Location.cpp  Location.h  SocialGroup.cpp  SocialGroup.h  main.cpp
DengueSim.xcodeproj/: project.pbxproj
DengueSim.xcodeproj/project.xcworkspace/xcuserdata/anna.xcuserdatad/: UserInterfaceState.xcuserstate
DengueSim.xcodeproj/xcshareddata/xcschemes/: DengueSim.xcscheme
DengueSim.xcodeproj/xcuserdata/anna.xcuserdatad/xcschemes/: xcschememanagement.plist
